Property system, API classes, and incrementstatistic CommandAPI(soft dependency) command.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,8 @@ name: StatCollector
 version: '${project.version}'
 main: me.cooleg.statcollector.StatCollector
 api-version: '1.18'
+softdepend:
+  - CommandAPI
 commands:
   savestats:
     permission: statistics.save
