--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,5 @@ commands:
     permission: statistics.toggle
   wipestats:
     permission: statistics.wipe
+libraries:
+  - club.minnced:discord-webhooks:0.8.4
